--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "gulci",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
